<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33101B"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="44dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/idTodo"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="Nama"
        android:textColor="#F8F8F8"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/LogNama"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/LogNama"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/tNama"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="Password"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/LogPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/LogPassword"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/tPassword"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:password="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btSignIn1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btSignIn1"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="#DF6464"
        android:text="@string/btsignin"
        android:textColor="#F8F8F8"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#2B0909" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="200dp"
        android:text="Anak Baru di Todo App?"
        android:textColor="#984C4C"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cobaSlideReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="164dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="Registrasi disini"
        android:textColor="#0303FF"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSignIn1"
        app:layout_constraintVertical_bias="0.8" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="58dp"
        android:layout_height="51dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="332dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toEndOf="@+id/LogPassword" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="180dp"
        android:layout_height="103dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logotodotiga" />

</androidx.constraintlayout.widget.ConstraintLayout>